pp2/samples/tested/call.frag.test

*** Error line 3.
        Camello camello = new Camello();
                ^^^^^^^
*** syntax error

